--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -35,6 +35,11 @@ input[type="number"]::-webkit-outer-spin-button {
   margin: 0; 
 }
 
+.form-group h5:after {
+  content:"*";
+  color:red;
+}
+
 /*--------------------------------------------------------------
 # Back to top button
 --------------------------------------------------------------*/
@@ -129,6 +134,7 @@ input[type="number"]::-webkit-outer-spin-button {
     height: 100% !important;
   }
 }
+
 
 /*--------------------------------------------------------------
 # Navigation Menu
